<resources>

    //APP
    <string name="app_name">RickAndMortyAPP</string>
    <string name="facebook_app_id">715136128867008</string>
    <string name="fb_login_protocol_scheme">fb715136128867008</string>
    <string name="code_message">code : %s message : %s</string>

    //Main Activity
    <string name="title_activity_bottom">BottomActivity</string>
    <string name="title_home">Home</string>
    <string name="collection">collection</string>
    <string name="titleSocial">Social</string>
    <string name="titleSettings">Settings</string>
    <string name="social">social</string>
    <string name="profilSettings">profil</string>

    //Login and Sign In Activity
    <string name="thanks_to_fill_all_fields">Merci de remplir l\'ensemble des champs pour te connecter</string>
    <string name="google_disconnected">Déconnecté de ton compte Google</string>
    <string name="btn_connection_google">Se connecter</string>
    <string name="btn_disconnection_google">Se déconnecter</string>
    <string name="no_account">Pas de compte ? <b><u>Clique ici</u></b> pour être Schwifty !</string>
    <string name="tv_password">Mot de passe</string>
    <string name="e_mail_hint">E-Mail</string>
    <string name="password_hint">Password</string>
    <string name="et_password">Mot de passe</string>
    <string name="btn_connection">Connexion</string>
    <string name="tv_login_title">Login</string>
    <string name="tv_sign_in_title">Sign In</string>
    <string name="tv_e_mail">E-mail</string>
    <string name="already_an_account">Déjà un compte ? <b><u>Clique ici</u></b> pour être Schwifty !</string>
    <string name="network_problem_please_try_again">Problème de réseau, merci de tenter de te connecter à nouveau</string>
    <string name="no_access_to_DB">Impossible de se connecter à la base de donnée. Réessayez plus tard.</string>
    <string name="double_back_to_quit_app">S\'il te plaît, clique sur retour une seconde fois pour quitter</string>
    <string name="welcome">Bienvenue %s</string>
    <string name="forgotten_password">Mot de passe oublié ? <b><u>Clique ici</u></b></string>

    //Home Fragment
    <string name="pickle_rick">I\'m piclke Rick !!!\nClique pour accéder au Shop !!!</string>
    <string name="wallet_amount"> %1$d $%2$s</string>
    <string name="actual_turn">Question %1d\/5</string>
    <string name="actual_score">Score : %1d\/5</string>
    <string name="final_score">Ton score final est de :\n%1d\/5</string>
    <string name="good_answer">Bonne réponse !!!</string>
    <string name="wrong_answer">Mauvaise réponse …</string>
    <string name="game_is_over">Partie terminée. Ton score final est de %1$d.\nTu as gagné %2$d PickleRick !!</string>
    <string name="try_an_other_game_later">Game over\nRetente ta chance demain !!!</string>
    <string name="code_message_userNotFound">code : %s user not found : %s</string>

    //Collection Fragment
    <string name="tv_description"><b>Status</b> : %s \n<b>Espece</b> : %s \n<b>Genre</b> : %s \n<b>Origine</b> : %s \n<b>Localisation actuelle</b> : %s</string>

    //Social Fragment
    <string name="btn_pending_friend_requests">Voir les requetes en attente</string>
    <string name="btn_list_of_friends">Voir sa liste d\'ami</string>
    <string name="friend_demand_added">Demande d\'amitié transmise !</string>
    <string name="delete_a_friend">Delete a friend</string>
    <string name="sure_to_delete_friend">Es-tu sur de vouloir supprimer %s de tes amis ?</string>
    <string name="requests_of_friends_title">Requetes en attente</string>
    <string name="list_of_friends_title">Liste d\'amis</string>
    <string name="btn_search">Rechercher</string>
    <string name="search_friend_by_attribute">Rechercher un ami par nom ou E-mail</string>

    //OpenDeck Activity
    <string name="number_of_deck_to_open">Tu as %s decks à ouvrir</string>

    //Shop Activity
    <string name="shop_title">Rick and Morty Shop</string>
    <string name="not_enought_money">Pas assez d\'argent pour ce pack</string>
    <string name="account_created">Compte créé</string>
    <string name="sellThisCard">Vendre cette carte ?</string>
    <string name="which_price_for_this_card">À quel prix la vends-tu ?</string>
    <string name="X_decks_added">%d decks ajoutés à ton pool !</string>
    <string name="youAlreadyWonThisTile">Tu as déjà gagné cette tuille !</string>
    <string name="booster_amount">%d Boosters</string>

    //Memory Game
    <string name="current_score">Score : %d</string>
    <string name="memory_game_over">Partie terminee. Ton score final est de %d.%s</string>
    <string name="turn_lefts">Coups restants : %d</string>
    <string name="cards_won">\nTu as gagne les cartes :\n</string>
    <string name="error_fetching_pictures">Une erreur est survenue lors de la récupération des images …</string>

    //Password Changement
    <string name="password_reminded"><b><u>Clique ici</u></b> Si tu te souviens de ton mot de passe</string>
    <string name="btn_change_password">M\'envoyer le code</string>
    <string name="hint_enter_your_mail">Entre ton E-mail</string>
    <string name="lost_password_title">Mot de passe perdu</string>
    <string name="change_your_password">Changer de mot de passe</string>
    <string name="enter_old_password">Ancien mot de passe</string>
    <string name="enter_new_password">Nouveau mot de passe</string>
    <string name="confirm_new_password">Nouveau mot de passe</string>
    <string name="btn_confirm_change_password">Confirmer</string>

    //Password
    <string name="ErrorInvalideCode">Le code est incorrect</string>
    <string name="ErrorCodeExpired">Le code est expiré merci de faire une nouvelle demande</string>
    <string name="ErrorUnknow">Une erreur est survenue, merci de reessayer plus tard</string>
    <string name="ErrorEmptyCode">Merci de rentrer ton code</string>
    <string name="ErrorEmptyEmail">Merci de rentrer ton adresse mail</string>
    <string name="titleChangePassword">Modifier ton mot de passe</string>
    <string name="inputOldPassword">Entre ton mot de passe</string>
    <string name="inputNewPassword">Entre ton nouveau mot de passe</string>
    <string name="inputConfPassword">Confirme ton mot de passe</string>
    <string name="btnValidate">Valider</string>
    <string name="ErrorSamePassword">Les mots de passe ne sont pas indentiques</string>
    <string name="requiredInput">Requis</string>
    <string name="AlreadyCode">J\'ai déja un code</string>
    <string name="tipsCodeReceived">Si tu n\'as pas recu le code merci de vérifier :  Que le mail ne soit pas dans tes indésirables  Que ton adresse mail soit bien liée à un compte RickAndMorty-TCG  Que ton compte ne soit pas un compte lié à Facebook ou Google  Si tu ne peux pas te connecter, merci de contacter nos équipes.</string>
    <string name="EnterCode">Entrez le code</string>
    <string name="enter_code">Entre ton Code recu par mail</string>
    <string name="codeHasBeenSend">Le code a été envoyé à l\'adresse indiqué</string>

    //Settings
    <string name="deconnection_alert">Déconnexion</string>
    <string name="deconnection_message">Veux-tu vraiment te déconnecter et quitter l\'application ?</string>
    <string name="disconnected">Tu es déconnecté\nÀ bientôt !</string>
    <string name="expired_session">Session expirée, merci de te reconnecter</string>
    <string name="please_fill_research_field">Merci de remplir le champ de recherche</string>
    <string name="too_poor_to_buy">Too poor to buy anything... get a job</string>
</resources>
