<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/socialFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".View.Social.SocialFragment">

    <TextView
        android:id="@+id/tv_searchFriends"
        style="@style/TextViewStyleWhite"
        android:text="@string/search_friend_by_attribute"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <SearchView
        android:id="@+id/sv_friends"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:queryHint="Search for friends"
        android:queryBackground="@android:color/white"
        android:searchIcon="@drawable/ic_search_white_24dp"
        android:iconifiedByDefault="false"
        app:layout_constraintEnd_toStartOf="@+id/btn_searchFriends"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_searchFriends" />


    <TextView
        android:id="@+id/tv_list_title"
        style="@style/TitleDetailStyle"
        tools:text="title"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:textAlignment="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/sv_friends"
        app:layout_constraintBottom_toTopOf="@id/rv_social"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_social"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_list_title"
        app:layout_constraintBottom_toTopOf="@+id/btn_friendsRequest"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_searchFriends"
        style="@style/btn_style"
        android:text="@string/btn_search"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintTop_toTopOf="@+id/sv_friends"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@+id/sv_friends" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_friendsRequest"
        style="@style/btn_style"
        tools:text="@string/requests_of_friends_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ProgressBar
        android:id="@+id/social_loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        tools:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>